--- a/studybud/base/templates/base/login_register.html
+++ b/studybud/base/templates/base/login_register.html
@@ -2,19 +2,41 @@
 
 {% block content %}
 
-<div>
-    <form method="POST" action="">
-        {% csrf_token %}
+    {% if page == 'login' %}
 
-        <label>Username: </label>
-        <input type="text" name="username" placeholder="Enter Username..."/>
+    <div>
+        <form method="POST" action="">
+            {% csrf_token %}
 
-        <label>Password: </label>
-        <input type="password" name="password" placeholder="Enter Password..."/>
+            <label>Username: </label>
+            <input type="text" name="username" placeholder="Enter Username..."/>
 
-        <input type="submit" value="login"/>
+            <label>Password: </label>
+            <input type="password" name="password" placeholder="Enter Password..."/>
 
-    </form>
-</div>
+            <input type="submit" value="login"/>
+
+            <p>Haven't signed up yet?</p>
+            <a href="{% url 'register' %}">Sign up</a>
+
+        </form>
+
+    </div>
+
+    {% elif page == 'register' %}
+    <div>
+        <form method="POST" action="">
+            {% csrf_token %}
+
+            {{ form.as_p }}
+
+            <input type="submit" value="register"/>
+        </form>
+
+        <p>Already signed up?</p>
+
+        <a href="{% url 'login' %}">Login</a>
+    </div>
+    {% endif %}
 
 {% endblock %}
